Add server-side rendering and core layout structure
Introduces Express server for SSR, proxy configuration, and server TypeScript setup. Adds core layout components (header, footer, main layout), shared modules, and feature components (home, about, contact, services). Updates Angular and package configs to support Angular Material and server dependencies.

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -85,6 +86,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -92,5 +94,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "728de1e0-47a6-4f15-b63a-5ee75808d4a6"
   }
 }
